# prototype

./: CMakeLists.txt  README.md
include/actors/bullet/: Bullet.h
include/actors/camera/: Camera.h
include/actors/circuits/: CircuitTag.h
include/actors/explosion/: Explosion.h
include/actors/player/: Player.h
include/actors/splinter/: Splinter.h
include/actors/star/: Star.h
include/actors/tank/: Tank.h
include/game/: Entity.h
include/game/collision/: PlayerBullet_EnemyCollision.h  PlayerOutCircuit.h
include/game/component/: Animation.h  Body.h  Collision.h  Layer.h  Position.h  Shape.h  Speed.h  State.h  Tick.h  Timer.h  Transform.h  Velocity.h
include/game/event/: Event.h
include/game/input/: PlayerRotate.h  PlayerShoot.h
include/game/system/: AABB.h  AnimFrames.h  CollisionSystem.h  ConstantForwardMovement.h  Draw.h  JoystickInput.h  Movement.h  PlayerInput.h  TickSystem.h  TimerSystem.h
include/game/utils/: ColorConversor.h  CompareTag.h  EventContainer.h  Random.h
src/: main.cpp
src/actors/bullet/: bullet.cpp
src/actors/camera/: camera.cpp
src/actors/explosion/: explosion.cpp
src/actors/player/: player.cpp
src/actors/splinter/: splinter.cpp
src/actors/star/: star.cpp
src/actors/tank/: tank.cpp
src/game/: entity.cpp
src/game/collision/: playerBullet_EnemyCollision.cpp  playerOutCircuit.cpp
src/game/component/: layer.cpp
src/game/event/: event.cpp
src/game/input/: playerRotate.cpp  playerShoot.cpp
src/game/system/: aabb.cpp  animFrame.cpp  collisionSystem.cpp  constantForwardMovement.cpp  draw.cpp  joystickInput.cpp  movement.cpp  (+3 more)
(+7 files in other folders)
